added clear button, updated ReadME, and uploaded new screenshot

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <div class="card-footer">
         <button id="generate" class="btn">Generate Password</button>
       </div>
+
+      <div class="card-footer">
+        <button id="clear" class="clear-btn">Clear Password</button>
+      </div>
+
     </div>
   </div>
   <script src="script.js"></script>
